--- a/www/templates/tab-helpme.html
+++ b/www/templates/tab-helpme.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Help Me">
-  <ion-content>
+  <ion-content class="has-header">
     chat testing
   </ion-content>
 </ion-view>
