add contact and back animation flow done

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -10,7 +10,7 @@
     <div>
 
     <div class="lending-content">
-        <div class="innner-div">text</div>
+        <a href="#/app/helpme"><div class="innner-div">text</div></a>
         <div class="innner-div">text</div>
         <div class="innner-div">text</div>
     </div>
