--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,14 +13,14 @@
     </header>
     <ion-content class="has-header">
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/addContact">
-          add Contact
+        <ion-item nav-clear menu-close href="#/app/dashboard">
+          Home
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/addContact">
-          Browse
+          Add Contact
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/addContact">
-          Playlists
+          Add Contact
         </ion-item>
       </ion-list>
     </ion-content>
