--- a/www/templates/Tour/tour.html
+++ b/www/templates/Tour/tour.html
@@ -43,7 +43,7 @@
       <option>AB -</option>
     </select>
   </label>
-				<a href="#app/dashboard">
+				<a href="#/app/dashboard">
 					<div class="tour-submit">
 						Submit
 					</div>
