Updated Home Page and other Pages

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,19 +1,60 @@
-<ion-view view-title="LifeLine">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
-  <ion-content class="padding has-header landing_bg">
-    
-    <div style="text-align: center;">
-      <p>Save the app that could save your love one.</p>
-      <img src="./img/heart-rate.png" height="120px">
-    <div>
+<ion-view>
+	<ion-nav-title>
+		<div class="rd-navbar-brand">
+			<a href="#/app/dashboard" class="brand-name primary-color">
+				<span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
+				<h1>Life<span class="text-primary" style="padding-bottom: 16px;">Line</span></h1>
 
-    <div class="lending-content">
-        <a href="#/app/helpme"><div class="innner-div">text</div></a>
+			</a>
+		</div>
+	</ion-nav-title>
+	<ion-nav-buttons side="left">
+		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
+	<ion-content class="padding has-header landing_bg">
+
+		<div style="text-align: center;">
+			<p>Save the app that could save your love one.</p>
+			<img src="./img/heart-rate.png" height="120px">
+			<div>
+
+				<!--<div class="lending-content">-->
+				<!--<a href="#/app/helpme"><div class="innner-div">text</div></a>
         <div class="innner-div">text</div>
-        <div class="innner-div">text</div>
-    </div>
-    
-  </ion-content>
+        <div class="innner-div">text</div>-->
+
+
+
+
+
+
+				<!--</div>-->
+				<div class="row">
+					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-lightbulb">
+          <p class="big">
+						Emergency
+					</p>
+          </span></div>
+					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
+          <p class="big">
+						Blood Bank
+					</p>
+          </span></div>
+				</div>
+				<div class="row lending-content">
+					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+          <p class="big">
+						Medicals
+					</p>
+          </span></div>
+					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+          <p class="big">
+						Help Me
+					</p>
+          </span></div>
+
+				</div>
+
+
+	</ion-content>
 </ion-view>
