--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .landing_bg{
-	background-color: #aa1d1d;
+	/*background-color: #aa1d1d;*/
+	background-color: #e74c3c;    
 	color: white;
 }
 
@@ -8,7 +9,7 @@
 	display: flex;
     justify-content: space-around;
     position: fixed;
-    bottom: 0;
+    bottom: 150px;
     width: 100%;
 }
 
@@ -23,3 +24,70 @@
 .scroll{
 	height: 100%;
 }
+
+.icon-xl {
+    width: 100px;
+    height: 100px;
+    line-height: 90px;
+    font-size: 45px;
+}
+.icon-grayscale-darken {
+    color: #fff;
+    background: #3e454c;
+}
+.icon {
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+}
+.big {
+    font-size: 0.4em;
+    line-height: 1;
+    padding-top: 10px;
+}
+/*Added for NavBar Icon*/
+ .rd-navbar-brand {
+    position: relative;
+    display: inline-block;
+    padding-left: 4px;
+    width: calc(100% - 104px);
+    -webkit-transform-origin: 0 7%;
+    transform-origin: 0 7%;
+    -webkit-transform: scale(0.5);
+    transform: scale(0.45);
+}
+.rd-navbar-brand a.brand-name * {
+    display: inline-block;
+    vertical-align: middle;
+}
+.rd-navbar-brand a.brand-name h1 {
+    position: relative;
+    top: 13px;
+    /*left: 17px;*/
+    font-size: 40px;
+    line-height: 1;
+    color: #3e454c;
+}
+.icon-primary {
+    color: #fff;
+    background: #e74c3c;
+}
+.icon-md {
+    width: 85px;
+    height: 85px;
+    line-height: 56px;
+    font-size: 56px;
+}
+.icon {
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.text-primary
+{
+color: #e74c3c;
+}
+
+/*nav-bar-title:parent { left: 30px !important;  }*/
+/**/
