--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -35,11 +35,15 @@
 						Emergency
 					</p>
           </span></div>
-					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
+					<div class="col">
+            <a href="#/app/BBlist">
+             <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
           <p class="big">
 						Blood Bank
 					</p>
-          </span></div>
+          </span></a>
+          
+          </div>
 				</div>
 				<div class="row lending-content">
 					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-medkit">
