--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,13 +1,13 @@
-<ion-side-menus>
+<ion-side-menus enable-menu-with-back-views="false">
 
   <ion-pane ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button class="button-clear"><i class="icon ion-chevron-left"></i> Back</ion-nav-back-button>
+      <ion-nav-back-button class="button-clear" ><i class="icon ion-chevron-left"></i> Back</ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" >
     <header class="bar bar-header bar-stable">
       <h1 class="title"></h1>
     </header>
