--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -1,16 +1,60 @@
-<ion-view >
+<ion-view>
     <ion-nav-title>
-		<div class="rd-navbar-brand">
-			<a href="#/app/dashboard" class="brand-name primary-color">
-				<span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
-				<h1>Blood<span class="text-primary" style="padding-bottom: 16px;">Banks</span></h1>
+        <div class="rd-navbar-brand">
+            <a href="#/app/dashboard" class="brand-name primary-color">
+                <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
+                <h1>Blood<span class="text-primary" style="padding-bottom: 16px;">Banks</span></h1>
 
-			</a>
-		</div>
-	</ion-nav-title>
+            </a>
+        </div>
+    </ion-nav-title>
     <ion-nav-back-button class="button-clear go-back">
-      </ion-nav-back-button>  
-  <ion-content class="has-header">
-    chat testing
-  </ion-content>
+    </ion-nav-back-button>
+    <ion-content class="has-header">
+        
+        <ion-list>
+            <label class="item item-input item-select item-assertive">
+                <div class="input-label">
+                    Select State
+                </div>
+
+                <select>
+                    <option>Option 1</option>
+                    <option selected>Option 2</option>
+                    <option>Option 3</option>
+                </select>
+            </label>
+            <label class="item item-input item-select item-assertive">
+                <div class="input-label">
+                    Select City
+                </div>
+
+                <select>
+                    <option>Lucknow</option>
+                    <option selected>Kanpur</option>
+                    <option>Delhi</option>
+                </select>
+            </label>
+            <div ng-repeat="group in groups">
+                <ion-item class="item-stable  item-icon-right"
+                          ng-click="toggleGroup(group)"
+                          ng-class="{active: isGroupShown(group)}">
+                    <i class="icon" ng-class="isGroupShown(group) ? 'ion-chevron-down custom-chevron-down' : 'ion-chevron-right'"></i>
+                    &nbsp;
+                    Blood Bank {{group.name}}
+                </ion-item>
+                <ion-item class="item-accordion"
+                          ng-repeat="item in group.items"
+                          ng-show="isGroupShown(group)">
+                    <div class="accordionleftDiV">{{item}}</div>
+                    <div class="accordionrightDiV">
+                        <i class="icon item-icon-right ion-ios-telephone custom-ios-telephone"></i>
+                        <i class="icon item-icon-right ion-android-textsms custom-android-textsms"></i>
+
+                    </div>
+                    
+                </ion-item>
+            </div>
+        </ion-list>
+    </ion-content>
 </ion-view>
