update CSS and new service file

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,8 +3,7 @@
 		<div class="rd-navbar-brand">
 			<a href="#/app/dashboard" class="brand-name primary-color">
 				<span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
-				<h1>Life<span class="text-primary" style="padding-bottom: 16px;">Line</span></h1>
-
+				<h1 style="top: -10px;"><span>Life</span><span class="text-primary">Line</span></h1>
 			</a>
 		</div>
 	</ion-nav-title>
@@ -17,18 +16,6 @@
 			<p>Save the app that could save your love one.</p>
 			<img src="./img/heart-rate.png" height="120px">
 			<div>
-
-				<!--<div class="lending-content">-->
-				<!--<a href="#/app/helpme"><div class="innner-div">text</div></a>
-        <div class="innner-div">text</div>
-        <div class="innner-div">text</div>-->
-
-
-
-
-
-
-				<!--</div>-->
 				<div class="row">
 					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-lightbulb">
           <p class="big">
@@ -45,7 +32,7 @@
           
           </div>
 				</div>
-				<div class="row lending-content">
+				<div class="row">
 					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-medkit">
           <p class="big">
 						Medicals
