--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .landing_bg{
 	/*background-color: #aa1d1d;*/
-	background-color: #e74c3c;    
+	background-color: #f8796c;    
 	color: white;
 }
 
