--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -18,9 +18,7 @@
                 </div>
 
                 <select>
-                    <option>Option 1</option>
-                    <option selected>Option 2</option>
-                    <option>Option 3</option>
+                    <option>--Select State--</option>                   
                 </select>
             </label>
             <label class="item item-input item-select item-assertive">
@@ -29,9 +27,8 @@
                 </div>
 
                 <select>
-                    <option>Lucknow</option>
-                    <option selected>Kanpur</option>
-                    <option>Delhi</option>
+                    <option>--Select City--</option>
+                    
                 </select>
             </label>
             <div ng-repeat="group in groups">
