--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -17,8 +17,9 @@
                     Select State
                 </div>
 
-                <select>
-                    <option>--Select State--</option>                   
+                <select id="StateID" name="geonameId" ng-model="item.id" ng-change="updateCities(item.id)" ng-options="item.id as item.name for item in countries">
+                    <option value="" selected>Select the state</option>
+                    <!--<option ng-repeat="country in countries" value="{{country.id}}">{{country.name}}</option>-->               
                 </select>
             </label>
             <label class="item item-input item-select item-assertive">
@@ -28,7 +29,7 @@
 
                 <select>
                     <option>--Select City--</option>
-                    
+                    <option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>
                 </select>
             </label>
             <div ng-repeat="group in groups">
