--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -24,11 +24,11 @@
             </label>
             <label class="item item-input item-select item-assertive">
                 <div class="input-label">
-                    Select City
+                    Select District
                 </div>
 
                 <select id="cityID" name="cityId" ng-model="cities.SelectedOption.ID" ng-change="updatebloodBanks(cities.SelectedOption)" ng-options="city as city.name for city in cities">
-                    <option value="" selected>Select the city</option>
+                    <option value="" selected>Select the district</option>
                     <!--<option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>-->
                 </select>
             </label>
