--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -17,7 +17,7 @@
                     Select State
                 </div>
 
-                <select id="StateID" name="geonameId" ng-model="item.id" ng-change="updateCities(item.id)" ng-options="item.id as item.name for item in countries">
+                <select id="StateID" name="geonameId" ng-model="item.SelectedOption.ID" ng-change="updateCities(item.SelectedOption)" ng-options="item as item.name for item in countries">
                     <option value="" selected>Select the state</option>
                     <!--<option ng-repeat="country in countries" value="{{country.id}}">{{country.name}}</option>-->               
                 </select>
