--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -45,18 +45,18 @@
                           ng-show="isGroupShown(group)">
                     <div class="card">
                         <div class="item item-text-wrap" style="font-family:Verdana,sans-serif">
-                        Name: {{item.h_name}}<br/>
-                            Address:{{item.district}},{{item.address}} <br />                           
-                            Postal: {{item.pincode}}<br />
-                            Service Time :{{item.service_time}}                            
-
+                            <strong>Name:</strong> {{item.h_name}}<br/>
+                            <strong>Address:</strong> {{item.district}},{{item.address}} <br />
+                            <strong>Postal:</strong> {{item.pincode}}<br />
+                            <strong>Service Time:</strong> {{item.service_time}} 
                         </div>
                         <div class="item item-divider">
-                            <div >
-                                <a href="tel:{{item.helpline}}"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone"></i></a>
-                                <a href="mailto:{{item.email}}"><i class="icon item-icon-right ion-android-textsms custom-android-textsms"></i></a>
-
-</div>
+                            <div style="display: flex;justify-content: space-between;">
+                               <div><a href="tel:NA"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"> {{item.contact}}</i></a>
+                               </div>
+                               <div> <a href="mailto:NA" class=""><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
+                               </div>
+                            </div>
                         </div>
                     </div>
                     <!--<div class="accordionleftDiV">{{item.address}}</div>
