tour screen updated

--- a/www/templates/Tour/Welcome.html
+++ b/www/templates/Tour/Welcome.html
@@ -2,16 +2,20 @@
 
 	<ion-slide-box show-pager="true">
 		<ion-slide>
-			<span class="icon icon-slide ion-document-text"></span>
-			<h3>Find Blood Bank</h3>
+			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-bb.png"/></div>
+			<h3>Find nearest blood bank based on states and cities</h3>
 		</ion-slide>
 		<ion-slide>
-			<span class="icon icon-slide ion-fork"></span>
-			<h3>Find help in Emergency</h3>
+			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-emergency.png"/></div>
+			<h3>Find emergency contact details</h3>
 		</ion-slide>
 		<ion-slide>
-			<span class="icon icon-slide ion-ios-sunny"></span>
-			<h3>Get Emergency Contacts</h3>
+			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-medical.png"/></div>
+			<h3>Find Hospitals and Doctors</h3>
+		</ion-slide>
+		<ion-slide>
+			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-helpme.png"/></div>
+			<h3>Shake and share your details to someone for your help, when you are in trouble</h3>
 		</ion-slide>
 
 		<ion-slide>
