--- a/www/templates/Tour/Welcome.html
+++ b/www/templates/Tour/Welcome.html
@@ -23,35 +23,36 @@
 			<h4>User Information Form</h4>
 			<div class="list">
 				<label class="item item-input item-stacked-label">
-    <div class="input-customlabel"> Name</div>
-    <input type="text" placeholder="John">
-  </label>
+			    <div class="input-customlabel"> Name</div>
+			    <input type="text" placeholder="John">
+			    </label>
 				<label class="item item-input item-stacked-label">
-    <div class="input-customlabel">Mobile</div>
-    <input type="text" placeholder="1234567890">
-  </label>
+			    <div class="input-customlabel">Mobile</div>
+			    <input type="text" placeholder="1234567890">
+			    </label>
 				<label class="item item-input item-stacked-label">
-    <div class="input-customlabel">Email</div>
-    <input type="text" placeholder="john@xxx.com">
-  </label>
+			    <div class="input-customlabel">Email</div>
+			    <input type="text" placeholder="john@xxx.com">
+			    </label>
 				<label class="item item-input item-stacked-label">
-    <div class="input-customlabel">Blood Group(Optional)</div>
-     <select class="tour-Select">
-      <option selected>O +</option>
-      <option >O -</option>
-      <option>A +</option>
-      <option>A -</option>
-      <option>B +</option>
-      <option>B -</option>
-        <option>AB +</option>
-      <option>AB -</option>
-    </select>
-  </label>
+			    <div class="input-customlabel">Blood Group(Optional)</div>
+			     <select class="tour-Select">
+			      <option selected>O +</option>
+			      <option >O -</option>
+			      <option>A +</option>
+			      <option>A -</option>
+			      <option>B +</option>
+			      <option>B -</option>
+			      <option>AB +</option>
+			      <option>AB -</option>
+			    </select>
+			    </label>
 				<a href="#/app/dashboard">
 					<div class="tour-submit">
 						Submit
 					</div>
 				</a>
+			</div>
 		</ion-slide>
 	</ion-slide-box>
 </ion-view>
