updated hospitality screen anf logic

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -17,34 +17,43 @@
 			<img src="./img/heart-rate.png" height="120px">
 			<div>
 				<div class="row">
-					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-lightbulb">
-          <p class="big">
-						Emergency
-					</p>
-          </span></div>
+					<div class="col"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-lightbulb">
+	          			<p class="big">
+							Emergency
+						</p>
+		          	</span>
+		        	</div>
 					<div class="col">
-            <a href="#/app/BBlist">
-             <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
-          <p class="big">
-						Blood Bank
-					</p>
-          </span></a>
-          
-          </div>
+		            <a href="#/app/BBlist">
+		                <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
+		          		<p class="big">
+							Blood Bank
+						</p>
+			            </span>
+			        </a>
+		          	</div>
 				</div>
 				<div class="row">
-					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-medkit">
-          <p class="big">
-						Medicals
-					</p>
-          </span></div>
-					<div class="col"> <span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
-          <p class="big">
-						Help Me
-					</p>
-          </span></div>
-
+					<div class="col">
+					<a href="#/app/Hospitality"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+			            <p class="big">
+							Hospitals
+						</p>
+			        </span>
+			        </a>
+			        </div>
+					<div class="col"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+			            <p class="big">
+							Help Me
+						</p>
+			        </span>
+			        </div>
 				</div>
+			</div>
+		</div>
 
 
 	</ion-content>
