--- a/www/templates/Hospitality.html
+++ b/www/templates/Hospitality.html
@@ -3,7 +3,7 @@
         <div class="rd-navbar-brand">
             <a href="#/app/dashboard" class="brand-name primary-color">
                 <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
-                <h1 style="top: -10px;"><span>Blood</span><span class="text-primary">Banks</span></h1>
+                <h1 style="top: -10px;"><span>Hospitals</span></h1>
             </a>
         </div>
     </ion-nav-title>
@@ -27,7 +27,7 @@
                     Select City
                 </div>
 
-                <select id="cityID" name="cityId" ng-model="cities.SelectedOption.ID" ng-change="updatebloodBanks(cities.SelectedOption)" ng-options="city as city.name for city in cities|orderBy:'name'">
+                <select id="cityID" name="cityId" ng-model="cities.SelectedOption.ID" ng-change="updateDetails(cities.SelectedOption)" ng-options="city as city.name for city in cities|orderBy:'name'">
                     <option value="" selected>Select the city</option>
                     <!--<option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>-->
                 </select>
@@ -38,36 +38,29 @@
                           ng-class="{active: isGroupShown(group)}">
                     <i class="icon" ng-class="isGroupShown(group) ? 'ion-chevron-down custom-chevron-down' : 'ion-chevron-right'"></i>
                     &nbsp;
-                   {{group.h_name}}
+                   {{group.name}}
                 </ion-item>
                 <ion-item class="item-accordion"
-                          ng-repeat="item in group.items"
                           ng-show="isGroupShown(group)">
                     <div class="card">
                         <div class="item item-text-wrap" style="font-family:Verdana,sans-serif">
-                            <strong>Name:</strong> {{item.h_name}}<br/>
-                            <strong>Address:</strong> {{item.district}},{{item.address}} <br />
-                            <strong>Postal:</strong> {{item.pincode}}<br />
-                            <strong>Service Time:</strong> {{item.service_time}} 
+                            <strong>Name:</strong> {{group.name}}<br/>
+                            <strong>Address:</strong> {{group.formatted_address}} <br />
+                            <strong>Open Now:</strong> {{group.opening_hours.open_now}}  <br />
+                            <strong>Rating:</strong> {{group.rating}}<br />
                         </div>
                         <div class="item item-divider">
                             <div style="display: flex;justify-content: space-between;">
-                               <div><a href="tel:NA"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"> {{item.contact}}</i></a>
+                               <div><a href="tel:NA"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"></i></a>
                                </div>
                                <div> <a href="mailto:NA" class=""><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
                                </div>
                             </div>
                         </div>
                     </div>
-                    <!--<div class="accordionleftDiV">{{item.address}}</div>
-                    <div class="accordionrightDiV">
-                        <i class="icon item-icon-right ion-ios-telephone custom-ios-telephone"></i>
-                        <i class="icon item-icon-right ion-android-textsms custom-android-textsms"></i>
-
-                    </div>-->
-                    
                 </ion-item>
             </div>
+            
         </ion-list>
     </ion-content>
 </ion-view>
