routing is done with parameter

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-					<a href="#/app/Hospitality"> 
+					<a ng-Click="onClickHospitality('Hospitals')"> 
 					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
 			            <p class="big">
 							Hospitals
