--- a/www/templates/Hospitality.html
+++ b/www/templates/Hospitality.html
@@ -3,7 +3,7 @@
         <div class="rd-navbar-brand">
             <a href="#/app/dashboard" class="brand-name primary-color">
                 <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
-                <h1 style="top: -10px;"><span>Hospitals</span></h1>
+                <h1 style="top: -10px;"><span> {{hospitalityType}} </span></h1>
             </a>
         </div>
     </ion-nav-title>
