Implemented for doctors , pharmcy, dentist hospitals

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-					<a ng-Click="onClickHospitality('Hospitals')"> 
+					<a ng-Click="onClickHospitality('Hospital')"> 
 					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
 			            <p class="big">
 							Hospitals
@@ -45,12 +45,52 @@
 			        </a>
 			        </div>
 					<div class="col"> 
+					<a ng-Click="onClickHospitality('Doctor')">
 					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
 			            <p class="big">
-							Help Me
+							Doctors
 						</p>
 			        </span>
+			        </a>
 			        </div>
+				</div>
+				<div class="row">
+					<div class="col">
+					<a ng-Click="onClickHospitality('Dentist')"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+			            <p class="big">
+							Dentist
+						</p>
+			        </span>
+			        </a>
+			        </div>
+					<div class="col"> 
+					<a ng-Click="onClickHospitality('Pharmacy')">
+					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+			            <p class="big">
+							Pharmacy
+						</p>
+			        </span>
+			        </a>
+			        </div>
+				</div>
+				<div class="row">
+					<div class="col">
+					<a> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+			            <p class="big">
+							Help me
+						</p>
+			        </span>
+			        </a>
+			        </div>
+					<!-- <div class="col"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+			            <p class="big">
+							pharmacy
+						</p>
+			        </span>
+			        </div> -->
 				</div>
 			</div>
 		</div>
