--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -28,7 +28,7 @@
 		            <a href="#/app/BBlist">
 		                <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
 		          		<p class="big">
-							Blood Bank
+							Blood Banks
 						</p>
 			            </span>
 			        </a>
@@ -36,7 +36,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-					<a ng-Click="onClickHospitality('Hospital')"> 
+					<a ng-Click="onClickHospitality('Hospitals')"> 
 					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
 			            <p class="big">
 							Hospitals
@@ -45,7 +45,7 @@
 			        </a>
 			        </div>
 					<div class="col"> 
-					<a ng-Click="onClickHospitality('Doctor')">
+					<a ng-Click="onClickHospitality('Doctors')">
 					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
 			            <p class="big">
 							Doctors
