--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -2,8 +2,8 @@
     <ion-nav-title>
         <div class="rd-navbar-brand">
             <a href="#/app/dashboard" class="brand-name primary-color">
-                <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span>
-                <h1 style="top: -10px;"><span>Blood</span><span class="text-primary">Banks</span></h1>
+                <!-- <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span> -->
+                <h1><span>Blood</span><span class="text-primary">Banks</span></h1>
             </a>
         </div>
     </ion-nav-title>
