--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -18,7 +18,7 @@
 			<div>
 				<div class="row">
 					<div class="col"> 
-					<span class="icon icon-xl icon-grayscale-darken  ion-lightbulb">
+					<span class="icon icon-xl icon-grayscale-darken  ion-alert-circled">
 	          			<p class="big">
 							Emergency
 						</p>
@@ -35,7 +35,7 @@
 		          	</div>
 		          	<div class="col">
 					<a> 
-					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
 			            <p class="big">
 							Help me
 						</p>
@@ -55,7 +55,7 @@
 			        </div>
 					<div class="col"> 
 					<a ng-Click="onClickHospitality('Doctors')">
-					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+					<span class="icon icon-xl icon-grayscale-darken  ion-person-stalker">
 			            <p class="big">
 							Doctors
 						</p>
@@ -64,7 +64,7 @@
 			        </div>
 			        <div class="col">
 					<a ng-Click="onClickHospitality('Dentist')"> 
-					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+					<span class="icon icon-xl icon-grayscale-darken  ion-person">
 			            <p class="big">
 							Dentist
 						</p>
@@ -76,7 +76,7 @@
 					
 					<div class="col"> 
 					<a ng-Click="onClickHospitality('Pharmacy')">
-					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+					<span class="icon icon-xl icon-grayscale-darken  ion-briefcase">
 			            <p class="big">
 							Pharmacy
 						</p>
