--- a/www/css/style.css
+++ b/www/css/style.css
@@ -26,14 +26,14 @@
 }
 
 .icon-xl {
-    width: 100px;
-    height: 100px;
-    line-height: 90px;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
     font-size: 45px;
 }
 .icon-grayscale-darken {
-    color: #fff;
-    background: #3e454c;
+    color: #060a76;
+    background: #fff;
 }
 .icon {
     display: inline-block;
@@ -41,9 +41,10 @@
     border-radius: 50%;
 }
 .big {
-    font-size: 0.4em;
+    font-size: 0.3em;
     line-height: 1;
     padding-top: 10px;
+    color: white;
 }
 /*Added for NavBar Icon*/
  .rd-navbar-brand {
