--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -34,7 +34,7 @@
 			        </a> -->
 		          	</div>
 		          	<div class="col">
-					<a> 
+					<a href="#/app/helpme"> 
 					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
 			            <p class="big">
 							Help me
