--- a/www/templates/SideMenu.html
+++ b/www/templates/SideMenu.html
@@ -13,19 +13,14 @@
       </ion-header-bar>
     <ion-content class="has-header">
       <ion-list>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
-            <span class="icon ion-ios-home">
-            </span> Home
-        </ion-item>
-          
-        <ion-item  class="item-icon-left" nav-clear menu-close href="#/app/addContact">
-            <span class="icon ion-ios-contact-outline">
-            </span> Contact US
-        </ion-item>
-
           <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
-              <span class="icon ion-share">
-              </span> Share APP
+              <span class="icon ion-ios-home">
+              </span> Home
+          </ion-item>
+          
+          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/addContact">
+              <span class="icon ion-ios-cog">
+              </span> Manage 
           </ion-item>
 
           <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
@@ -33,10 +28,15 @@
               </span> FeedBack
           </ion-item>
 
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/addContact">
-            <span class="icon ion-ios-cog">
-            </span> Settings
-        </ion-item>
+          <ion-item  class="item-icon-left" nav-clear menu-close href="#/app/addContact">
+              <span class="icon ion-ios-contact-outline">
+              </span> Contact US
+          </ion-item>
+
+          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
+              <span class="icon ion-share">
+              </span> Share LifeLine
+          </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
