--- a/www/templates/SideMenu.html
+++ b/www/templates/SideMenu.html
@@ -23,7 +23,7 @@
               </span> Manage 
           </ion-item>
 
-          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
+          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/feedback">
               <span class="icon ion-ios-compose">
               </span> FeedBack
           </ion-item>
