--- a/www/templates/ManageContact.html
+++ b/www/templates/ManageContact.html
@@ -8,15 +8,15 @@
 				<h4 style="padding-left: 15px;">Personal Information</h4>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel"> Name</div>
-			    <input type="text" placeholder="John">
+			    <input type="text" placeholder="John" class="inputCSS">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Mobile</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Email</div>
-			    <input type="text" placeholder="john@xxx.com">
+			    <input type="text" placeholder="john@xxx.com" class="inputCSS">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Blood Group(Optional)</div>
@@ -37,23 +37,23 @@
 				<h4 style="padding-left: 15px;">Emergency Contact Information</h4>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Contact 1:</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 			    <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Contact 2:</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 			    <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Contact 3:</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 			    <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Contact 4:</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 			    <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Contact 5:</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS">
 			    </label>
 			</div>
     
