plugin added , help screen UI Done

--- a/www/templates/HelpMe.html
+++ b/www/templates/HelpMe.html
@@ -1,5 +1,25 @@
-<ion-view view-title="Help Me">
-  <ion-content class="has-header">
-    chat testing
-  </ion-content>
+<ion-view>
+    <ion-nav-title>
+        <div class="rd-navbar-brand">
+            <a href="#/app/dashboard" class="brand-name primary-color">
+                <!-- <span class="icon icon-md icon-primary"><i class="icon ion-ios-home"></i></span> -->
+                <h1><span> Help Me </span></h1>
+            </a>
+        </div>
+    </ion-nav-title>
+    <ion-nav-back-button class="button-clear go-back">
+    </ion-nav-back-button>
+    <ion-content class="has-header">
+        
+        <ion-list>
+            <div style="text-align: center;padding-top: 10%;">
+                Shake your phone <br />or <br /> press below image for help.
+            </div>
+
+            <div style="text-align: center;padding-top: 30%;">
+                <img src="../img/helpMe.png" style="height: 200px;border-radius: 50%;background-color: lightgray;" />
+            </div>
+        </ion-list>
+
+    </ion-content>
 </ion-view>
