shake functionality Done

--- a/www/templates/HelpMe.html
+++ b/www/templates/HelpMe.html
@@ -12,8 +12,8 @@
     <ion-content class="has-header">
         
         <ion-list>
-            <div style="text-align: center;padding-top: 10%;">
-                Shake your phone <br />or <br /> press below image for help.
+            <div style="text-align: center;padding-top: 10%;font-size: 20px;">
+                Shake your phone <br />or <br /> Press below image for help.
             </div>
 
             <div style="text-align: center;padding-top: 30%;">
